[workspace]
members = [
  "iceberg-datafusion-arrow-flight",
  "iceberg-datafusion-arrow-flight-sql",
]

[workspace.dependencies]
object_store = { version = "0.9", features = ["aws", "gcp"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
futures = "0.3.30"
async-trait = "0.1"
arrow = "50.0.0"
arrow-flight = { version = "50.0.0", features = ["flight-sql-experimental"] }
arrow-schema = "50.0.0"
datafusion = "36.0.0"
iceberg-rust = "0.2.0"
datafusion_iceberg = "0.2.0"
thiserror = "1.0"
tonic = { version = "0.10", features = ["transport", "tls"] }
