[workspace]
members = [
  "iceberg-datafusion-arrow-flight",
  "iceberg-datafusion-arrow-flight-sql",
  "iceberg-datafusion-arrow-flight-rest",
]

resolver = "2"

[workspace.dependencies]
object_store = { version = "0.10.1", features = ["aws", "gcp"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
futures = "0.3.30"
async-trait = "0.1"
arrow = "52.1.0"
arrow-flight = { version = "52.1.0", features = ["flight-sql-experimental"] }
arrow-schema = "52.1.0"
datafusion = "40.0.0"
iceberg-rust = "0.5"
datafusion_iceberg = "0.5"
thiserror = "1.0"
tonic = { version = "0.11", features = ["transport", "tls"] }
