[package]
name = "iceberg-datafusion-arrow-flight-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-flight.workspace = true
object_store.workspace = true
iceberg-rust.workspace = true
datafusion_iceberg.workspace = true
tonic.workspace = true
log = "0.4.20"
env_logger = "0.10.1"
iceberg-datafusion-arrow-flight = { path = "../iceberg-datafusion-arrow-flight/" }
tokio = "1"
iceberg-sql-catalog = "0.5"
rcgen = "0.12.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "any", "sqlite", "postgres", "mysql"], default-features = false }
