[package]
name = "iceberg-datafusion-arrow-flight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow.workspace = true
arrow-schema.workspace = true
arrow-flight.workspace = true
datafusion.workspace = true
iceberg-rust.workspace = true
datafusion_iceberg.workspace = true
futures.workspace = true
thiserror.workspace = true
dashmap = "5.5.3"
log = "0.4.20"
mimalloc = "0.1.39"
prost = "0.12.3"
tonic = { version = "0.10.2", features = ["transport", "tls"] }
uuid = "1.6.1"
base64 = "0.21.7"
